kubernetes-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: LoadBalancer
  selector:
    app: simple-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80 # Pod exposed port
